# webscrapers

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
src/webscrapers/: __init__.py
src/webscrapers/reddit/: __init__.py  __main__.py
tests/: reddit_post_example.html  test_reddit.py
